PROJECT(mposmp)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

# depends
FIND_PACKAGE(EXPAT REQUIRED)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall -Wextra")

INCLUDE_DIRECTORIES(${EXPAT_INCLUDE_DIR})
ADD_EXECUTABLE(raildemo raildemo.cc railrouting.cc)
TARGET_LINK_LIBRARIES(raildemo ${EXPAT_LIBRARY})
